<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="246dp"
        android:layout_height="536dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="359dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/labelId"
                    android:textColor="@color/success"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inputId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_input"
                    android:ems="10"
                    android:hint="@string/hintIdExample"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@color/color_input_dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelCurrentQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/labelCurrentQuantity"
                    android:textColor="@color/success"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/InputCurrentQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_input"
                    android:ems="10"
                    android:hint="@string/hintQuantityExample"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@color/color_input_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/labelWeight"
                    android:textColor="@color/success"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inputWeight"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_input"
                    android:ems="10"
                    android:hint="@string/hintWeightExample"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@color/color_input_dark" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSendBoxData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSendBoxData"
                app:backgroundTint="@color/success" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/idLoadFragmenttwo"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="20dp">

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>