<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="316dp"
        android:layout_height="304dp"
        android:scaleX="3.5"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="293dp"
        android:layout_height="605dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="282dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="283dp"
                android:layout_height="66dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/gtelogo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleAppLabel"
                    android:layout_width="283dp"
                    android:layout_height="186dp"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/titleAppLabel"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="?attr/listPreferredItemHeight" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/subtitleAppLabel"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="284dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGoSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/intersemibold"
                android:text="@string/btnGoSignIn"
                android:textColor="@color/white"
                app:backgroundTint="@color/success" />

            <Button
                android:id="@+id/btnGoToWebSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/actionBar"
                android:fontFamily="@font/intersemibold"
                android:text="@string/btnGoToWebSite"
                android:textColor="@color/success" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>